[gd_scene load_steps=9 format=3 uid="uid://bt5ucgysiymdh"]

[ext_resource type="Script" path="res://Level/level.gd" id="1_7ivsn"]
[ext_resource type="PackedScene" uid="uid://b2wqwlmnbafc7" path="res://Player/Player.tscn" id="1_nivtw"]
[ext_resource type="FontFile" uid="uid://c8jqgwcoabnxp" path="res://Assets/PoetsenOne-Regular.ttf" id="2_6yhbj"]
[ext_resource type="PackedScene" uid="uid://dd3ncw3nvw24d" path="res://Opponent/opponent.tscn" id="2_umqwc"]
[ext_resource type="PackedScene" uid="uid://bcanh4a2cgfli" path="res://Ball/ball.tscn" id="3_dyiyv"]
[ext_resource type="AudioStream" uid="uid://ej6bt52xd2iv" path="res://Assets/ping_pong_8bit_beeep.ogg" id="6_bejn4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1b2q"]
size = Vector2(1280, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nq8uh"]
size = Vector2(16, 704)

[node name="Level" type="Node"]
script = ExtResource("1_7ivsn")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.129412, 0.14902, 1)

[node name="CountdownLabel" type="Label" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.972656, 0.304688, 0.140625, 1)
theme_override_fonts/font = ExtResource("2_6yhbj")
theme_override_font_sizes/font_size = 40
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerScore" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_right = -200.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.977668, 1)
theme_override_colors/font_color = Color(0.85098, 0.847059, 0.843137, 1)
theme_override_fonts/font = ExtResource("2_6yhbj")
theme_override_font_sizes/font_size = 50
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpponentScore" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.85098, 0.847059, 0.843137, 1)
theme_override_fonts/font = ExtResource("2_6yhbj")
theme_override_font_sizes/font_size = 50
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" parent="." instance=ExtResource("1_nivtw")]
position = Vector2(100, 360)

[node name="WallTop" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2(640, 0)
shape = SubResource("RectangleShape2D_g1b2q")

[node name="WallBot" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBot"]
position = Vector2(640, 720)
shape = SubResource("RectangleShape2D_g1b2q")

[node name="Opponent" parent="." instance=ExtResource("2_umqwc")]
position = Vector2(1180, 360)

[node name="Ball" parent="." instance=ExtResource("3_dyiyv")]

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-8, 360)
shape = SubResource("RectangleShape2D_nq8uh")

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(1288, 360)
shape = SubResource("RectangleShape2D_nq8uh")

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bejn4")

[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
